--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2 id="text3">Cậu yêu tớ có phải không nào ._.</h2>
+          <h2 id="text3">Anh đã xác định là em là người mà con tim, lý trí của anh đã chọn.</h2>
           <h4 id="text4">
-            Nếu cậu ko trả lời mà thoát ra tức là muốn làm vợ tớ rùi đó nha :v
+            An à làm người yêu anh nhé em là nguồn động lực to lớn của anh
           </h4>
         </header>
         
@@ -50,7 +50,7 @@
         </button>
 
         <button id="no" type="button" class="btn btn-info btn-lg">
-          Cậu mơ à :333
+          Em hong đồng ý
         </button>
       </div>
     </div>
